--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "mongoose": "5.10.15",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
-    "rxjs": "6.6.3"
+    "rxjs": "6.6.3",
+    "yup": "0.31.0"
   },
   "devDependencies": {
     "@nestjs/cli": "7.5.1",
@@ -48,6 +49,7 @@
     "@types/mongoose": "5.10.1",
     "@types/node": "14.14.6",
     "@types/supertest": "2.0.10",
+    "@types/yup": "0.29.9",
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
     "eslint": "7.12.1",
